--- a/app/views/bookings/bookingform.html.erb
+++ b/app/views/bookings/bookingform.html.erb
@@ -1,4 +1,4 @@
-<form action = '/pricings/testing'>
+<form action = '/bookings/testing'>
 	ROOMTYPE: <input type="number" name = "roomtype_id" value = 1><br>
 	HOTEL: <input type="number" name = "hotel_id" value = 1><br>
 	START DATE:<input type="date" name = "startdate"><br>
