--- a/app/views/roomtypes/edit.html.erb
+++ b/app/views/roomtypes/edit.html.erb
@@ -1,5 +1,4 @@
-<h1 align="center" >Editing Roomtype</h1>
 
-<%= render 'form' %>
+<%= render 'form1' %>
 <%= link_to 'Show', @roomtype %> |
 <%= link_to 'Back', roomtypes_path %>
